--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -344,7 +344,7 @@
     <string name="proxy">پروکسی</string>
     <string name="look_and_feel">بر و رو</string>
     <string name="interface_and_interaction">رابط و تعامل</string>
-    <string name="custom_command_usage_msg">yt-dlp یک ابزار دستور متنی برای دانلود ویدئو است. Seal، استفاده از yt-dlp را با کمک محیط گرافیک قابل‌فهم، دستورات مرسوم پیش‌فرض، و قابلیت‌های اضافی آسان می‌کند.
+    <string name="custom_command_usage_msg">yt-dlp یک ابزار دستور متنی برای دانلود ویدئو است. Seal Plus، استفاده از yt-dlp را با کمک محیط گرافیک قابل‌فهم، دستورات مرسوم پیش‌فرض، و قابلیت‌های اضافی آسان می‌کند.
 \n
 \nSeal با کمک ساختن، ذخیره و اجرا قالب‌های دستوری مرسوم به صورت مستقیم، همانند ترمینال، به شما اجازه می‌دهد تا از قابلیت‌های پیشرفته بهره‌مند شوید.
 \n
