--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -252,7 +252,7 @@
     <string name="beta_features">בטא</string>
     <string name="split_video_msg">הסרטון יפוצל ל-%1$d פרקים</string>
     <string name="cookies_usage_msg">הורדה מאתרים מסוימים דורשת אימות חשבון. לחץ על \"צור עוגיות חדשות\", הזן את כתובת האתר ולאחר מכן התחבר עם חשבונך בדף הדפדפן, והאפליקציה תייצר אותן עבורך.</string>
-    <string name="custom_command_usage_msg">yt-dlp הוא כלי שורת פקודה רב עוצמה להורדת סרטונים. Seal מקל על השימוש ב-yt-dlp על ידי מתן GUI אינטואיטיבי, הגדרות קבועות מראש לפקודות נפוצות ותכונות נוספות אחרות.
+    <string name="custom_command_usage_msg">yt-dlp הוא כלי שורת פקודה רב עוצמה להורדת סרטונים. Seal Plus מקל על השימוש ב-yt-dlp על ידי מתן GUI אינטואיטיבי, הגדרות קבועות מראש לפקודות נפוצות ותכונות נוספות אחרות.
 \n
 \nלשימוש מתקדם ב-yt-dlp, אפליקציית Seal מאפשרת ליצור, לשמור ולבצע תבניות פקודות מותאמות אישית ישירות, ממש כמו בטרמינל.
 \n
