--- a/app/src/main/res/values-mn/strings.xml
+++ b/app/src/main/res/values-mn/strings.xml
@@ -230,7 +230,7 @@
     <string name="custom_command_enabled_hint">Захиалгат тушаалыг ашиглах үед зарим сонголтууд боломжгүй байдаг</string>
     <string name="how_does_it_work">Энэ нь хэрхэн ажилладаг вэ?</string>
     <string name="cookies_usage_msg">Зарим сайтаас татаж авахад акаунтын баталгаажуулалтын мэдээлэл шаардлагатай. \"Шинэ күүки үүсгэх\" дээр дарж, вэб сайтын URL хаягийг оруулаад хөтчийн хуудсанд өөрийн бүртгэлээр нэвтэрч, апп үүнийг танд үүсгэх болно.</string>
-    <string name="custom_command_usage_msg">yt-dlp бол видео татаж авах командын шугамын хүчирхэг хэрэгсэл юм. Seal нь ойлгомжтой GUI, нийтлэг командуудад зориулсан урьдчилан тохируулгууд болон бусад нэмэлт функцээр хангаснаар yt-dlp-г ашиглахад хялбар болгодог.
+    <string name="custom_command_usage_msg">yt-dlp бол видео татаж авах командын шугамын хүчирхэг хэрэгсэл юм. Seal Plus нь ойлгомжтой GUI, нийтлэг командуудад зориулсан урьдчилан тохируулгууд болон бусад нэмэлт функцээр хангаснаар yt-dlp-г ашиглахад хялбар болгодог.
 \n
 \nYt-dlp-г илүү сайн ашиглахын тулд Seal нь танд захиалгат командын загваруудыг шууд үүсгэх, хадгалах, гүйцэтгэх боломжийг олгодог. яг терминал дээрх шиг.
 \n
