--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -339,9 +339,9 @@
     </plurals>
     <string name="ua_header">Заголовок User-Agent</string>
     <string name="export_to_file">Экспорт в файл</string>
-    <string name="custom_command_usage_msg">yt-dlp — мощный инструмент командной строки для загрузки видео. Seal упрощает использование yt-dlp, предоставляя интуитивно понятный графический интерфейс, предустановки для общих команд и другие дополнительные функции.
+    <string name="custom_command_usage_msg">yt-dlp — мощный инструмент командной строки для загрузки видео. Seal Plus упрощает использование yt-dlp, предоставляя интуитивно понятный графический интерфейс, предустановки для общих команд и другие дополнительные функции.
 \n
-\nДля расширенного использования yt-dlp Seal позволяет создавать, сохранять и выполнять собственные шаблоны команд напрямую, как в терминале.
+\nДля расширенного использования yt-dlp Seal Plus позволяет создавать, сохранять и выполнять собственные шаблоны команд напрямую, как в терминале.
 \n
 \nПри использовании пользовательских команд большинство параметров и функций графического интерфейса будут отключены.</string>
     <string name="presets">Пресеты</string>
