--- a/app/src/main/res/values-sr/strings.xml
+++ b/app/src/main/res/values-sr/strings.xml
@@ -338,7 +338,7 @@
     </plurals>
     <string name="ua_header">Заглавље User-Agent</string>
     <string name="export_to_file">Извези у фајл</string>
-    <string name="custom_command_usage_msg">yt-dlp је моћна алатка командне линије за преузимање видео снимака. Seal олакшава коришћење yt-dlp-а тако што пружа интуитивни GUI, унапред подешене вредности за уобичајене команде и друге додатне функције.
+    <string name="custom_command_usage_msg">yt-dlp је моћна алатка командне линије за преузимање видео снимака. Seal Plus олакшава коришћење yt-dlp-а тако што пружа интуитивни GUI, унапред подешене вредности за уобичајене команде и друге додатне функције.
 \n
 \nЗа напредну употребу yt-dlp-а, Seal вам омогућава да направите, сачувате и извршите прилагођене командне шаблоне директно, баш као у терминалу.
 \n
