--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -339,7 +339,7 @@
     </plurals>
     <string name="ua_header">Заголовок User-Agent</string>
     <string name="export_to_file">Експорт у файл</string>
-    <string name="custom_command_usage_msg">yt-dlp – це потужний інструмент командного рядка для завантаження відео. Seal полегшує використання yt-dlp, надаючи інтуїтивно зрозумілий графічний інтерфейс, пресети для поширених команд та інші додаткові можливості.
+    <string name="custom_command_usage_msg">yt-dlp – це потужний інструмент командного рядка для завантаження відео. Seal Plus полегшує використання yt-dlp, надаючи інтуїтивно зрозумілий графічний інтерфейс, пресети для поширених команд та інші додаткові можливості.
 \n
 \nДля розширеного використання yt-dlp, Seal дозволяє створювати, зберігати й виконувати власні шаблони команд безпосередньо, як у терміналі.
 \n
