--- a/app/src/main/res/values-ml/strings.xml
+++ b/app/src/main/res/values-ml/strings.xml
@@ -122,7 +122,7 @@
     <string name="permission_issue">സംഭരണ അനുമതി പ്രശ്നം</string>
     <string name="permission_issue_desc">ഡൗൺലോഡ്/, ഡോക്യുമെന്റുകൾ/ എന്നിവയ്ക്ക് പുറത്തുള്ള ഡയറക്ടറികൾ പിന്തുണയ്ക്കുന്നില്ല</string>
     <string name="battery_configuration">ബാറ്ററി കോൺഫിഗറേഷൻ</string>
-    <string name="service_title">സീൽ ഡൗൺലോഡ് ചെയ്യുന്നു…</string>
+    <string name="service_title">സീൽ പ്ലസ് ഡൗൺലോഡ് ചെയ്യുന്നു…</string>
     <string name="unknown_error">അപരിചിതമായ പിശക്</string>
     <string name="embed_subtitles">സബ്ടൈറ്റിലുകൾ ഉൾച്ചേർക്കുക</string>
     <string name="template_label">ലേബൽ</string>
@@ -277,9 +277,9 @@
     <string name="every_week">എല്ലാ ആഴ്ചയും</string>
     <string name="auto_translated_subtitles">യാന്ത്രികമായി വിവർത്തനം ചെയ്‌ത സബ്‌ടൈറ്റിലുകൾ</string>
     <string name="auto_translated_subtitles_msg">യാന്ത്രികമായി വിവർത്തനം ചെയ്‌ത സബ്‌ടൈറ്റിലുകൾ എല്ലാ ഭാഷകൾക്കും ഡൗൺലോഡുകളിൽ ലഭ്യമാകും. ഈ സബ്‌ടൈറ്റിലുകൾ കൃത്യമല്ലാത്തതും മനസ്സിലാക്കാൻ ബുദ്ധിമുട്ടുള്ളതുമാകാം.</string>
-    <string name="custom_command_usage_msg">yt-dlp വീഡിയോകൾ ഡൗൺലോഡ് ചെയ്യുന്നതിനുള്ള ശക്തമായ ഒരു കമാൻഡ്-ലൈൻ ഉപകരണമാണ്. ഒരു അവബോധജന്യമായ GUI, പൊതുവായ കമാൻഡുകൾക്കുള്ള പ്രീസെറ്റുകൾ, മറ്റ് അധിക സവിശേഷതകൾ എന്നിവ നൽകിക്കൊണ്ട് yt-dlp ഉപയോഗിക്കുന്നത് സീൽ എളുപ്പമാക്കുന്നു.
+    <string name="custom_command_usage_msg">yt-dlp വീഡിയോകൾ ഡൗൺലോഡ് ചെയ്യുന്നതിനുള്ള ശക്തമായ ഒരു കമാൻഡ്-ലൈൻ ഉപകരണമാണ്. ഒരു അവബോധജന്യമായ GUI, പൊതുവായ കമാൻഡുകൾക്കുള്ള പ്രീസെറ്റുകൾ, മറ്റ് അധിക സവിശേഷതകൾ എന്നിവ നൽകിക്കൊണ്ട് yt-dlp ഉപയോഗിക്കുന്നത് സീൽ പ്ലസ് എളുപ്പമാക്കുന്നു.
 \n
-\nyt-dlp-യുടെ വിപുലമായ ഉപയോഗത്തിനായി, ഒരു ടെർമിനലിൽ പോലെ നേരിട്ട് ഇഷ്‌ടാനുസൃത കമാൻഡ് ടെംപ്ലേറ്റുകൾ സൃഷ്‌ടിക്കാനും സംരക്ഷിക്കാനും നടപ്പിലാക്കാനും സീൽ നിങ്ങളെ അനുവദിക്കുന്നു.
+\nyt-dlp-യുടെ വിപുലമായ ഉപയോഗത്തിനായി, ഒരു ടെർമിനലിൽ പോലെ നേരിട്ട് ഇഷ്‌ടാനുസൃത കമാൻഡ് ടെംപ്ലേറ്റുകൾ സൃഷ്‌ടിക്കാനും സംരക്ഷിക്കാനും നടപ്പിലാക്കാനും സീൽ പ്ലസ് നിങ്ങളെ അനുവദിക്കുന്നു.
 \n
 \nഇഷ്‌ടാനുസൃത കമാൻഡുകൾ ഉപയോഗിക്കുമ്പോൾ, മിക്ക GUI ഓപ്ഷനുകളും സവിശേഷതകളും പ്രവർത്തനരഹിതമാകും.</string>
     <string name="update_channel_desc">പുതിയ ഫീച്ചറുകളും മാറ്റങ്ങളും പ്രിവ്യൂ ചെയ്യുന്നതിന് പ്രീ-റിലീസ് ബിൽഡുകൾ ഇൻസ്റ്റാൾ ചെയ്യുക.
@@ -322,7 +322,7 @@
     <string name="got_it">മനസ്സിലായി</string>
     <string name="subdirectory_hint">നിങ്ങളുടെ ഡൗൺലോഡുകൾ ഇങ്ങനെ സംരക്ഷിക്കപ്പെടും:</string>
     <string name="enable_experimental_feature">പരീക്ഷണാത്മക ഫീച്ചർ പ്രവർത്തനക്ഷമമാക്കണോ?</string>
-    <string name="sponsor_msg">സീൽ എല്ലായ്‌പ്പോഴും സൗജന്യവും ഓപ്പൺ സോഴ്‌സും ആയിരിക്കും. നിങ്ങൾക്കത് ഇഷ്‌ടമാണെങ്കിൽ, GitHub-ൽ എന്നെ സ്‌പോൺസർ ചെയ്യുന്നത് പരിഗണിക്കൂ!</string>
+    <string name="sponsor_msg">സീൽ പ്ലസ് എല്ലായ്‌പ്പോഴും സൗജന്യവും ഓപ്പൺ സോഴ്‌സും ആയിരിക്കും. നിങ്ങൾക്കത് ഇഷ്‌ടമാണെങ്കിൽ, GitHub-ൽ എന്നെ സ്‌പോൺസർ ചെയ്യുന്നത് പരിഗണിക്കൂ!</string>
     <string name="feedback">പ്രതികരണം</string>
     <string name="sponsors">സ്പോൺസർമാർ</string>
     <string name="split_video">വീഡിയോ വിഭജിക്കുക</string>
