--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -291,9 +291,9 @@
     <string name="matrix_space">เมทริกซ์สเปซ</string>
     <string name="multiselect_mode">โหมดเลือกหลายรายการ</string>
     <string name="crop_artwork">ครอบตัดรูปภาพ</string>
-    <string name="custom_command_usage_msg">yt-dlp คือเครื่องมือ command line ประสิทธิภาพสูงสำหรับดาวน์โหลดวีดีโอ Seal ทำให้การใช้งาน yt-dlp ง่ายขึ้นด้วยอินเทอร์เฟซที่เรียบง่าย, พรีเซ็ตคำสั่งทั่วไป และฟีเจอร์เพิ่มเติมอื่นๆ
+    <string name="custom_command_usage_msg">yt-dlp คือเครื่องมือ command line ประสิทธิภาพสูงสำหรับดาวน์โหลดวีดีโอ Seal Plus ทำให้การใช้งาน yt-dlp ง่ายขึ้นด้วยอินเทอร์เฟซที่เรียบง่าย, พรีเซ็ตคำสั่งทั่วไป และฟีเจอร์เพิ่มเติมอื่นๆ
 \n
-\nสำหรับการใช้งานขั้นสูงของ yt-dlp. Seal ให้คุณสามารถสร้าง, บันทึก และใช้เทมเพลตคำสั่งที่กำเองได้โดยตรง เหมือนเทอมินอลเลย
+\nสำหรับการใช้งานขั้นสูงของ yt-dlp. Seal Plus ให้คุณสามารถสร้าง, บันทึก และใช้เทมเพลตคำสั่งที่กำเองได้โดยตรง เหมือนเทอมินอลเลย
 \n
 \nเมื่อคุณกำลังใช้คำสั่งที่กำหนดเอง ตัวเลือกและฟีเจอร์ที่เกี่ยวข้องกับส่วนติดต่อผู้ใช้งานจะถูกปิดใช้งานด้วย</string>
     <string name="general_settings_desc">เวอร์ชั่นของ Yt-dlp, การแจ้งเตือน, เพลย์ลิสต์</string>
