feat: Add Network Type Restrictions in Sealplus Extras (v1.2.2)
- Added new Sealplus Extras settings page with premium features
- Implemented Network Type Restriction feature:
  * Any Network (default) - Downloads on both WiFi and mobile data
  * WiFi Only - Restricts downloads to WiFi connections only
  * Mobile Only - Restricts downloads to mobile data only
- Enhanced network detection logic in PreferenceUtil
- Added network availability checks before downloads
- User-friendly error messages for network restrictions
- Material Design 3 UI with dynamic icons
- Integration with download dialog and custom commands
- Updated app version to 1.2.2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -436,6 +436,19 @@
     <string name="issue_tracker">Issue tracker</string>
     <string name="trouble_shooting_desc">Fix common errors and check for known issues</string>
     <string name="issue_tracker_hint">Encountered an error? Before reporting a new issue, please search our issue tracker. Many common problems have already been addressed and documented there.</string>
+    
+    <!-- Sealplus Extras -->
+    <string name="sealplus_extras">Sealplus Extras</string>
+    <string name="sealplus_extras_desc">Premium features and advanced settings</string>
+    <string name="network_type_restriction">Network type restriction</string>
+    <string name="network_type_restriction_desc">Control which network types are allowed for downloads. Choose between WiFi only, mobile data only, or any network type.</string>
+    <string name="any_network">Any network</string>
+    <string name="wifi_only">WiFi only</string>
+    <string name="mobile_only">Mobile data only</string>
+    <string name="wifi_only_restriction_message">Downloads are restricted to WiFi only. Please connect to WiFi to download.</string>
+    <string name="mobile_only_restriction_message">Downloads are restricted to mobile data only. Please disconnect from WiFi to download.</string>
+    <string name="network_unavailable">Network unavailable. Please check your connection.</string>
+    
     <string name="saved_urls">Saved links</string>
     <string name="add_new_url">Add new link</string>
     <string name="add_to">Add to %1$s</string>
