Fix XML syntax error: Add missing closing tag in strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -547,3 +547,4 @@
     <string name="biometric_unsupported">Biometric authentication is not supported on this device</string>
     <string name="biometric_status_unknown">Biometric status unknown</string>
     <string name="biometric_unavailable">Biometric authentication is unavailable</string>
+</resources>
