Add stylish exit confirmation dialog to Download Queue page
- Added BackHandler to intercept back button press on Download Queue page
- Implemented ExitConfirmationDialog with Material Design 3 styling
- Added exit confirmation strings (exit_app_title, exit_app_message, exit)
- Dialog matches Gradient Dark theme with proper icon and buttons
- User can cancel or confirm exit with informative message about background downloads
- Fully integrated with existing SealDialog, ConfirmButton, and DismissButton components

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -557,4 +557,9 @@
     <string name="reset_app_lock_desc">Remove all PIN data and turn off App Lock completely</string>
     <string name="reset_app_lock_warning">Are you sure you want to reset App Lock? This will:\n\n• Remove your PIN\n• Turn off App Lock\n• Reset all security settings\n\nYou can set up App Lock again from scratch afterward.</string>
     <string name="app_lock_reset_success">App Lock has been reset successfully</string>
+    
+    <!-- Exit Confirmation strings -->
+    <string name="exit_app_title">Exit Seal Plus?</string>
+    <string name="exit_app_message">Are you sure you want to exit the app? Any ongoing downloads will continue in the background.</string>
+    <string name="exit">Exit</string>
 </resources>
