--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -440,6 +440,7 @@
     <!-- Sealplus Extras -->
     <string name="sealplus_extras">Sealplus Extras</string>
     <string name="sealplus_extras_desc">Premium features and advanced settings</string>
+    <string name="advanced_features">Advanced Features</string>
     <string name="network_type_restriction">Network type restriction</string>
     <string name="network_type_restriction_desc">Control which network types are allowed for downloads. Choose between WiFi only, mobile data only, or any network type.</string>
     <string name="any_network">Any network</string>
